[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
http-body-util = "0.1.0-rc.2" 
bitcode = "0.4"

[dependencies.model]
git = "https://github.com/drippy-iot/model.git" 
rev = "9840487"

[dependencies.env_logger]
version = "0.10"
default-features = false
features = ["color"]

[dependencies.hyper]
version = "1.0.0-rc.3"
features = ["http1", "server"]
default-features = false

[dependencies.tokio]
version = "1.28.1"
features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal"]
default-features = false
