[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitcode = "0.4"
http-body-util = "0.1.0-rc.2" 
log = "0.4"

[dependencies.env_logger]
version = "0.10"
default-features = false
features = ["color"]

[dependencies.futures-util]
version = "0.3"
default-features = false

[dependencies.hyper]
version = "1.0.0-rc.3"
features = ["http1", "server"]
default-features = false

[dependencies.model]
git = "https://github.com/drippy-iot/model.git" 
features = ["report"]
default-features = false

[dependencies.tokio]
version = "1.28.1"
features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal"]
default-features = false
